Fix typos in proposal and upload new pdf

--- a/project/proposal_manuscript/proposal.tex
+++ b/project/proposal_manuscript/proposal.tex
@@ -13,19 +13,24 @@
 
 \section*{Project Proposal}
 
+\subsection*{Motivation}
 
+Many movement diseases can be casted as failures in timing during the planning of a movement.
 Understanding how the timing of actions is controlled before
 they reach the motor cortex is crucial in movement planning.
-Past experiments have suggested that medial prefrontal cortex (dmPFC)
+Past experiments have suggested that medial pre-frontal cortex (dmPFC)
 is involved in the timing of actions and the top-down control of motor system
-in the motor cortex (MC). This process ocurrs by suppressing responses
+in the motor cortex (MC). This process occurs by suppressing responses
 during movement delays.
+
+
+\subsection*{Methods}
 
 Here we want to replicate the findings by Nandakumar et. al. \cite{narayanan2009delay}
 and Bekolay et. al. \cite{bekolay2014spiking} using the nengo simulation system \cite{bekolay2013nengo}.
-\cite{narayanan2009delay} decribes neural activity in dmPFC and MC using
+\cite{narayanan2009delay} describes neural activity in dmPFC and MC using
 time-series Principle Components Analysis (PCA) across neural populations.
-They then decribe roles of delay-activity in dmPFC and motor cortex where
+They then describe roles of delay-activity in dmPFC and motor cortex where
 they propose the top-down control model between both areas. \cite{bekolay2014spiking}
 proposes model to simulate spikes using double-integrator network as a concrete
 mechanism that would replicate the results in \cite{narayanan2009delay}.
@@ -33,6 +38,7 @@ mechanism that would replicate the results in \cite{narayanan2009delay}.
 Concretely, I'll use \textit{nengo} \cite{bekolay2013nengo}, a Python library to simulate spikes trains,
 to simulate the model described in \cite{bekolay2014spiking} which
 explains the results in \cite{narayanan2009delay}.
+
 
 \subsection*{Current status}
 
